--- a/src/assets/sass/sections/_projects.scss
+++ b/src/assets/sass/sections/_projects.scss
@@ -34,3 +34,26 @@ p.tags {
     max-width: none;
     border-radius: 10px;
   }
+
+  .project-list {
+    padding: 0;
+  }
+  
+  .filter-box {
+    background-color: #fff;
+    border: 1px solid color(grey-light);
+    border-radius: 10px;
+    button {
+      font-size: rem-calc(14px);
+      margin: .5rem;
+      padding-block: .2rem;
+      padding-inline: 1rem;
+      border: transparent;
+      border-radius: .75em;
+      color: #fff;
+      background-color: color(tertiary);
+      &:focus {
+        background-color: color(primary);
+      }
+    }
+  }
